--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "2.2.0",
   "description": "Cross platform ActionSheet. This component implements a custom ActionSheet  and provides the same way to drawing it on the defferent platforms(iOS and Android). Actually, In order to keep the best effect, it still uses the ActionSheetIOS on iOS.",
   "main": "lib/index.js",
-  "scripts": {
-  },
+  "scripts": {},
   "files": [
     "lib"
   ],
@@ -20,5 +19,8 @@
   "bugs": {
     "url": "https://github.com/beefe/react-native-actionsheet/issues"
   },
-  "homepage": "https://github.com/beefe/react-native-actionsheet#readme"
+  "homepage": "https://github.com/beefe/react-native-actionsheet#readme",
+  "dependencies": {
+    "prop-types": "^15.5.10"
+  }
 }
